--- a/prometheus.service
+++ b/prometheus.service
@@ -9,7 +9,7 @@ After=network-online.target
 User=prometheus
 Group=prometheus
 Type=simple
-ExecStart=/root/prometheus-files/prometheus 
+ExecStart=/bin/bash /root/prometheus-files/prometheus 
 
 [Install]
 WantedBy=multi-user.target
