--- a/prometheus.service
+++ b/prometheus.service
@@ -6,8 +6,8 @@ Wants=network-online.target
 After=network-online.target
 
 [Service]
-User=prometheus
-Group=prometheus
+#User=prometheus
+#Group=prometheus
 Type=simple
 ExecStart=/usr/bin/sudo /bin/bash /root/prometheus-files/prometheus 
 
