--- a/prometheus.service
+++ b/prometheus.service
@@ -8,7 +8,7 @@ After=network-online.target
 [Service]
 #User=prometheus
 #Group=prometheus
-Type=simple
+#Type=simple
 ExecStart=/usr/bin/sudo /bin/bash /root/prometheus-files/prometheus 
 
 [Install]
