--- a/prometheus.service
+++ b/prometheus.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 #User=prometheus
 #Group=prometheus
-#Type=simple
+Type=simple
 ExecStart=/usr/bin/sudo /bin/bash /root/prometheus-files/prometheus
 
 [Install]
