--- a/node_exporter.service
+++ b/node_exporter.service
@@ -3,8 +3,8 @@ Description=Node Exporter
 After=network.target
  
 [Service]
-User=node_exporter
-Group=node_exporter
+User=root
+Group=root
 Type=simple
 ExecStart=/usr/local/bin/node_exporter
  
