--- a/node_exporter.service
+++ b/node_exporter.service
@@ -3,8 +3,8 @@ Description=Node Exporter
 After=network.target
  
 [Service]
-User=root
-Group=root
+#User=root
+#Group=root
 Type=simple
 ExecStart=/usr/local/bin/node_exporter
  
